[package]
name = "mobiletypst"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "mobiletypst"

[[bin]]
name = "mobile_typst"
path = "src/main.rs"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
comemo = "0.4.0"
dirs = "5.0.1"
ecow = "0.2.2"
flate2 = "1.0.28"
fontdb = "0.16.2"
tar = "0.4.40"
thiserror = "1.0.58"
typst = "0.11.0"
typst-assets = { version = "0.11.0", features = ["fonts"] }
typst-pdf = "0.11.0"
typst-render = "0.11.0"
typst-syntax = "0.11.0"
uniffi = { version = "0.26", features = ["build", "cli"] }
ureq = { version = "2.9.6", features = ["json"] }

[build-dependencies]
uniffi_bindgen = "=0.26"
uniffi = { version = "0.26", features = ["build", "cli"] }
